--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".news.NewsDetailActivity" />
         <activity android:name=".relax.RelaxActivity" />
         <activity android:name=".alarm.AddAlarmActivity" />
+        <activity android:name=".todo.TodoListActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
